# Geometry

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/D/: D.cpp
apps/F/: F.cpp
apps/G/: G.cpp
apps/H/: H.cpp
include/Double/: Double.hpp
include/Geometry/: Geometry.hpp  Geometry3d.hpp
src/: CMakeLists.txt
src/Geometry/: ConvexHull.cpp  Geometry.cpp  VoronoiDiagram.cpp
src/Geometry3d/: ConvexHull.cpp  Geometry3d.cpp
tests/: CMakeLists.txt
tests/GoogleTests/: CMakeLists.txt  GeometryTests.cpp
tests/GoogleTests/Double/: CMakeLists.txt  basic.cpp
tests/GoogleTests/Geometry/: CMakeLists.txt  basic.cpp
tests/GoogleTests/Geometry3d/: CMakeLists.txt  basic.cpp
tests/Helpers/: test_utils.sh
tests/Primitive/: CMakeLists.txt  D_primitive.sh  F_primitive.sh  G_primitive.sh  H_primitive.sh
tests/StaticAnalysis/: .clang-tidy  CMakeLists.txt  clang_tidy_tests.sh
